hphp/test/slow/reassign_this/1496.php.expectf
HipHop Fatal error: Cannot re-assign $this in %s/test/slow/reassign_this/1496.php on line 6
